--- a/src/css/main/_first-screen.scss
+++ b/src/css/main/_first-screen.scss
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
 
 .first-screen {
-  background    : linear-gradient(90deg, $grey-dark 10%, $grey 50%, $grey-dark 90%);
   display       : flex;
   flex-direction: column;
-  position      : relative;
+  background    : linear-gradient(90deg, $grey-dark 10%, $grey 50%, $grey-dark 90%);
 
   &__theses {
     width      : 752px;
@@ -15,34 +14,6 @@
     line-height: 95px;
     color      : $black;
     text-shadow: 0 4px 4px rgba($black, 0.25);
-    opacity    : 1;
-
-    &.hide {
-      opacity: 0;
-    }
-
-    li {
-      margin     : 10px 5px;
-      line-height: 1.0;
-
-      &:first-of-type {
-        margin-top: 20px;
-      }
-    }
-  }
-
-  &__spacer {
-    flex-grow: 1;
-  }
-
-  &__contact-us {
-    font-size       : 1.5rem;
-    line-height     : 100%;
-    display         : inline-block;
-    background-color: $blue-light;
-    color           : $white;
-    padding         : 8px 16px;
-    border-radius   : 6px;
   }
 }
 
@@ -52,19 +23,17 @@
 }
 
 .first-screen-body {
-  display         : flex;
-  justify-content : center;
-  align-items     : center;
-  flex-direction  : column;
-  position        : sticky;
-  padding         : 20px;
-  margin-bottom   : 98px;
-  width           : 100%;
-  top             : 0;
-  z-index         : 1000;
-  background-color: transparent;
-  transform       : translateY(-20px);
-  transition      : background-color 0.3s ease-in-out, transform 0.5s ease;
+  position       : relative;
+  top            : 0;
+  z-index        : 1000;
+  display        : flex;
+  flex-direction : column;
+  justify-content: center;
+  align-items    : center;
+  width          : 100%;
+  padding        : 20px;
+  margin-bottom  : 98px;
+  box-shadow     : none;
 
   &__item {
     display        : flex;
@@ -82,10 +51,8 @@
     position        : fixed;
     top             : 0;
     left            : 0;
-    width           : 100%;
     background-color: $grey;
     box-shadow      : 0 12px 18px -6px rgba($black, 0.3);
-    transform       : translateY(0);
   }
 }
 
@@ -151,29 +118,33 @@
   z-index    : 10;
 
   a img {
-    width          : 240px;
     display        : inline-flex;
-    align-items    : center;
     justify-content: center;
-    transform      : translateY(-20px);
-    transition     : transform 0.5s ease;
+    align-items    : center;
+    width          : 240px;
   }
-}
-
-.trap-element {
-  height    : 1px;
-  visibility: hidden;
 }
 
 .logo-active {
   z-index: 1001;
-
   a img {
     position : fixed;
     top      : 9px;
     right    : 57px;
     width    : 72px;
     height   : 46px;
-    transform: translateY(0);
+    animation: dropAnimation 0.5s ease-out forwards;
+  }
+}
+
+@keyframes dropAnimation {
+  0% {
+    clip-path: circle(0% at 50% 50%);
+  }
+  50% {
+    clip-path: circle(50% at 50% 50%);
+  }
+  100% {
+    clip-path: circle(100% at 50% 50%);
   }
 }
